Bonuses, Physics Refactoring

--- a/Console Game/Console Game.csproj
+++ b/Console Game/Console Game.csproj
@@ -113,14 +113,17 @@
     <Compile Include="Game\Runtime\Bomb\Model\IBomb.cs" />
     <Compile Include="Game\Runtime\Bomb\View\BombView.cs" />
     <Compile Include="Game\Runtime\Bomb\View\IBombView.cs" />
+    <Compile Include="Game\Runtime\Bonus\Factory\BonusFactory.cs" />
     <Compile Include="Game\Runtime\Bonus\Factory\EnemiesKillBonusFactory.cs" />
     <Compile Include="Game\Runtime\Bonus\Factory\HealBonusFactory.cs" />
     <Compile Include="Game\Runtime\Bonus\Factory\IBonusFactory.cs" />
     <Compile Include="Game\Runtime\Bonus\Factory\Loop\BonusLoopFactory.cs" />
     <Compile Include="Game\Runtime\Bonus\Factory\Loop\IBonusLoopFactory.cs" />
     <Compile Include="Game\Runtime\Bonus\Factory\IncreaseFactorBonusFactory.cs" />
+    <Compile Include="Game\Runtime\Bonus\Factory\View\BonusViewFactory.cs" />
+    <Compile Include="Game\Runtime\Bonus\Factory\View\IBonusViewFactory.cs" />
+    <Compile Include="Game\Runtime\Bonus\Model\Bonus.cs" />
     <Compile Include="Game\Runtime\Bonus\Model\Bonuses.cs" />
-    <Compile Include="Game\Runtime\Bonus\Model\BonusWithView.cs" />
     <Compile Include="Game\Runtime\Bonus\Model\EnemiesKillBonus.cs" />
     <Compile Include="Game\Runtime\Bonus\Model\HealBonus.cs" />
     <Compile Include="Game\Runtime\Bonus\Model\IBonus.cs" />
@@ -148,7 +151,11 @@
     <Compile Include="Game\Runtime\GameLoop\Pause\View\IGamePauseView.cs" />
     <Compile Include="Game\Runtime\Inventory\Factory\IInventoryViewFactory.cs" />
     <Compile Include="Game\Runtime\Inventory\Factory\InventoryViewFactory.cs" />
-    <Compile Include="Game\Runtime\Physics\Colliders\World\LayerMask.cs" />
+    <Compile Include="Game\Runtime\Physics\Colliders\Factory\BoxColliderFactory.cs" />
+    <Compile Include="Game\Runtime\Physics\Colliders\Factory\IColliderFactory.cs" />
+    <Compile Include="Game\Runtime\Physics\Colliders\World\GameObjectsCollidersWorld.cs" />
+    <Compile Include="Game\Runtime\Physics\Colliders\World\IGameObjectsCollidersWorld.cs" />
+    <Compile Include="Game\Runtime\Physics\Colliders\World\Layer.cs" />
     <Compile Include="Game\Runtime\Player\Factory\PlayerFactory.cs" />
     <Compile Include="Game\Runtime\Player\Factory\IPlayerFactory.cs" />
     <Compile Include="Game\Runtime\Player\Input\PlayerInput.cs" />
@@ -275,6 +282,7 @@
     <Compile Include="Game\Runtime\Stats\Health\Factory\CharacterHealthFactory.cs" />
     <Compile Include="Game\Runtime\Stats\Health\Factory\HealthFactory.cs" />
     <Compile Include="Game\Runtime\Stats\Health\Factory\IHealthFactory.cs" />
+    <Compile Include="Game\Runtime\Stats\Health\Factory\PhysicsHealthFactory.cs" />
     <Compile Include="Game\Runtime\Stats\Health\Factory\View\CharacterHealthViewFactory.cs" />
     <Compile Include="Game\Runtime\Stats\Health\Factory\View\EnemyHealthViewFactory.cs" />
     <Compile Include="Game\Runtime\Stats\Health\Factory\View\IHealthViewFactory.cs" />
