--- a/Console Game/Console Game.csproj
+++ b/Console Game/Console Game.csproj
@@ -114,6 +114,7 @@
     <Compile Include="Game\Runtime\Bomb\View\BombView.cs" />
     <Compile Include="Game\Runtime\Bomb\View\IBombView.cs" />
     <Compile Include="Game\Runtime\Bonus\Factory\BonusFactory.cs" />
+    <Compile Include="Game\Runtime\Bonus\Factory\BulletsBonusFactory.cs" />
     <Compile Include="Game\Runtime\Bonus\Factory\EnemiesKillBonusFactory.cs" />
     <Compile Include="Game\Runtime\Bonus\Factory\HealBonusFactory.cs" />
     <Compile Include="Game\Runtime\Bonus\Factory\IBonusFactory.cs" />
@@ -124,6 +125,7 @@
     <Compile Include="Game\Runtime\Bonus\Factory\View\IBonusViewFactory.cs" />
     <Compile Include="Game\Runtime\Bonus\Model\Bonus.cs" />
     <Compile Include="Game\Runtime\Bonus\Model\Bonuses.cs" />
+    <Compile Include="Game\Runtime\Bonus\Model\BulletsBonus.cs" />
     <Compile Include="Game\Runtime\Bonus\Model\EnemiesKillBonus.cs" />
     <Compile Include="Game\Runtime\Bonus\Model\HealBonus.cs" />
     <Compile Include="Game\Runtime\Bonus\Model\IBonus.cs" />
@@ -133,10 +135,12 @@
     <Compile Include="Game\Runtime\Character\Character.cs" />
     <Compile Include="Game\Runtime\Character\ICharacter.cs" />
     <Compile Include="Game\Runtime\Character\IReadOnlyCharacter.cs" />
-    <Compile Include="Game\Runtime\Enemy\Factory\Behaviour Tree\EnemyWithWeaponBehaviourTreeFactory.cs" />
-    <Compile Include="Game\Runtime\Enemy\Factory\Behaviour Tree\ZombieBehaviourTreeFactory.cs" />
-    <Compile Include="Game\Runtime\Enemy\Model\EnemyType.cs" />
+    <Compile Include="Game\Runtime\Enemy\EnemyType.cs" />
+    <Compile Include="Game\Runtime\Enemy\Factory\ShooterEnemyFactory.cs" />
+    <Compile Include="Game\Runtime\Enemy\Factory\ZombieFactory.cs" />
     <Compile Include="Game\Runtime\Enemy\Model\IEnemy.cs" />
+    <Compile Include="Game\Runtime\Enemy\Model\ShooterEnemy.cs" />
+    <Compile Include="Game\Runtime\Enemy\Model\Zombie.cs" />
     <Compile Include="Game\Runtime\Enemy\Nodes\AttackHealthNode.cs" />
     <Compile Include="Game\Runtime\GameLoop\Objects\GameObject\Group\GameObjects.cs" />
     <Compile Include="Game\Runtime\GameLoop\Objects\GameObject\Group\IGameObjects.cs" />
@@ -166,14 +170,11 @@
     <Compile Include="Game\Runtime\Effect\Factory\IEffectFactory.cs" />
     <Compile Include="Game\Runtime\Effect\Model\FakeEffect.cs" />
     <Compile Include="Game\Runtime\Effect\Model\IEffect.cs" />
-    <Compile Include="Game\Runtime\Enemy\Factory\EnemyFactory.cs" />
     <Compile Include="Game\Runtime\Enemy\Factory\IEnemyFactory.cs" />
-    <Compile Include="Game\Runtime\Enemy\Factory\RandomEnemyFactory.cs" />
     <Compile Include="Game\Runtime\Enemy\Nodes\IsNearNode.cs" />
     <Compile Include="Game\Runtime\Enemy\Nodes\MoveNode.cs" />
     <Compile Include="Game\Runtime\Enemy\Nodes\WaitNode.cs" />
     <Compile Include="Game\Runtime\Enemy\Nodes\WeaponAttackNode.cs" />
-    <Compile Include="Game\Runtime\Enemy\Model\Enemy.cs" />
     <Compile Include="Game\Runtime\Bomb\Factory\IBombFactory.cs" />
     <Compile Include="Game\Runtime\Enemy\World\EnemiesWorld.cs" />
     <Compile Include="Game\Runtime\Enemy\World\IEnemiesWorld.cs" />
@@ -342,9 +343,6 @@
     <Compile Include="Game\Runtime\Stats\Wallet\Model\WalletWithSave.cs" />
     <Compile Include="Game\Runtime\Stats\Wallet\View\IWalletView.cs" />
     <Compile Include="Game\Runtime\Stats\Wallet\View\WalletView.cs" />
-    <Compile Include="Game\Runtime\Timer\IReadOnlyTimer.cs" />
-    <Compile Include="Game\Runtime\Timer\ITimer.cs" />
-    <Compile Include="Game\Runtime\Timer\Timer.cs" />
     <Compile Include="Game\Runtime\Tools\Behaviour Tree\IEnemyBehaviourTreeFactory.cs" />
     <Compile Include="Game\Runtime\Tools\Exceptions\LessThanOrEqualsToZeroException.cs" />
     <Compile Include="Game\Runtime\Tools\Extensions\BehaviourTreeExtensions.cs" />
@@ -406,6 +404,9 @@
     <Compile Include="Game\Runtime\Tools\Save Storages\Paths\Paths.cs" />
     <Compile Include="Game\Runtime\Tools\Save Storages\SaveStorages.cs" />
     <Compile Include="Game\Runtime\Tools\Save Storages\XmlStorage.cs" />
+    <Compile Include="Game\Runtime\Tools\Timer\IReadOnlyTimer.cs" />
+    <Compile Include="Game\Runtime\Tools\Timer\ITimer.cs" />
+    <Compile Include="Game\Runtime\Tools\Timer\Timer.cs" />
     <Compile Include="Game\Runtime\Transform\IReadOnlyTransform.cs" />
     <Compile Include="Game\Runtime\Transform\ITransform.cs" />
     <Compile Include="Game\Runtime\Transform\Parent\ITransformParent.cs" />
@@ -460,11 +461,15 @@
     <Compile Include="Game\Runtime\UI\Model\Window\Windows.cs" />
     <Compile Include="Game\Runtime\UI\View\Button\ButtonView.cs" />
     <Compile Include="Game\Runtime\UI\View\Button\IButtonView.cs" />
-    <Compile Include="Game\Runtime\Wave\Factory\IWavesFactory.cs" />
-    <Compile Include="Game\Runtime\Wave\Factory\WavesLoopFactory.cs" />
-    <Compile Include="Game\Runtime\Wave\Factory\WavesFactory.cs" />
-    <Compile Include="Game\Runtime\Wave\Model\IWave.cs" />
-    <Compile Include="Game\Runtime\Wave\Model\Wave.cs" />
+    <Compile Include="Game\Runtime\Wave\Data\EnemyWaveData.cs" />
+    <Compile Include="Game\Runtime\Wave\Data\IEnemyWaveData.cs" />
+    <Compile Include="Game\Runtime\Wave\Factory\IEnemyWavesFactory.cs" />
+    <Compile Include="Game\Runtime\Wave\Factory\EnemyWavesFactory.cs" />
+    <Compile Include="Game\Runtime\Wave\Model\EnemyWavesLoop.cs" />
+    <Compile Include="Game\Runtime\Wave\Model\IEnemyWave.cs" />
+    <Compile Include="Game\Runtime\Wave\Model\Queue\IEnemyWavesQueue.cs" />
+    <Compile Include="Game\Runtime\Wave\Model\Queue\EnemyWavesQueue.cs" />
+    <Compile Include="Game\Runtime\Wave\Model\EnemyWave.cs" />
     <Compile Include="Game\Runtime\Weapon\Bullet\Factory\IBulletFactory.cs" />
     <Compile Include="Game\Runtime\Weapon\Bullet\Factory\BulletFactory.cs" />
     <Compile Include="Game\Runtime\Weapon\Bullet\Factory\ShotgunBulletFactory.cs" />
@@ -473,14 +478,12 @@
     <Compile Include="Game\Runtime\Weapon\Bullet\Model\IBullet.cs" />
     <Compile Include="Game\Runtime\Weapon\Bullet\View\BulletView.cs" />
     <Compile Include="Game\Runtime\Weapon\Bullet\View\IBulletView.cs" />
-    <Compile Include="Game\Runtime\Weapon\Data\Collection\IWeaponsData.cs" />
-    <Compile Include="Game\Runtime\Weapon\Data\Collection\WeaponsData.cs" />
-    <Compile Include="Game\Runtime\Weapon\Data\IWeaponData.cs" />
-    <Compile Include="Game\Runtime\Weapon\Data\WeaponData.cs" />
+    <Compile Include="Game\Runtime\Weapon\Data\IWeaponPartsData.cs" />
+    <Compile Include="Game\Runtime\Weapon\Data\WeaponPartsData.cs" />
     <Compile Include="Game\Runtime\Weapon\Factory\GrenadeFactory.cs" />
     <Compile Include="Game\Runtime\Weapon\Factory\InfinitePistolFactory.cs" />
     <Compile Include="Game\Runtime\Weapon\Factory\IWeaponFactory.cs" />
-    <Compile Include="Game\Runtime\Weapon\Factory\StartWeaponFactory.cs" />
+    <Compile Include="Game\Runtime\Weapon\Factory\WeaponWithMagazineFactory.cs" />
     <Compile Include="Game\Runtime\Weapon\Factory\View\Infinite\IInfiniteWeaponViewFactory.cs" />
     <Compile Include="Game\Runtime\Weapon\Factory\View\Infinite\InfiniteWeaponViewFactory.cs" />
     <Compile Include="Game\Runtime\Weapon\Factory\View\IWeaponViewFactory.cs" />
@@ -509,8 +512,6 @@
     <Compile Include="Game\Runtime\Weapon\Parts\Battery\View\IBatteryView.cs" />
     <Compile Include="Game\Runtime\Weapon\Parts\Battery\View\WeaponBatteryView.cs" />
     <Compile Include="Game\Runtime\Weapon\Parts\Magazine\Factory\IWeaponMagazineFactory.cs" />
-    <Compile Include="Game\Runtime\Weapon\Parts\Magazine\Factory\View\IWeaponMagazineViewFactory.cs" />
-    <Compile Include="Game\Runtime\Weapon\Parts\Magazine\Factory\View\WeaponMagazineViewFactory.cs" />
     <Compile Include="Game\Runtime\Weapon\Parts\Magazine\Factory\WeaponMagazineFactory.cs" />
     <Compile Include="Game\Runtime\Weapon\Parts\Magazine\Model\IReadOnlyWeaponMagazine.cs" />
     <Compile Include="Game\Runtime\Weapon\Parts\Magazine\Model\IWeaponMagazine.cs" />
@@ -522,6 +523,7 @@
     <Compile Include="Game\Runtime\Weapon\View\IWeaponActivityView.cs" />
     <Compile Include="Game\Runtime\Weapon\View\IWeaponView.cs" />
     <Compile Include="Game\Runtime\Weapon\View\WeaponView.cs" />
+    <Compile Include="Game\Tests\CharacterTest.cs" />
     <Compile Include="Game\Tests\DummyEnemy.cs" />
     <Compile Include="Game\Tests\DummyMovement.cs" />
     <Compile Include="Game\Tests\DummySaveStorage.cs" />
@@ -529,6 +531,8 @@
     <Compile Include="Game\Tests\Health\DummyHealthView.cs" />
     <Compile Include="Game\Tests\Health\HealthTest.cs" />
     <Compile Include="Game\Tests\Health\KillsStreakTest.cs" />
+    <Compile Include="Game\Tests\Inventory\DummyInventoryItem.cs" />
+    <Compile Include="Game\Tests\Inventory\DummyInventoryItemViewData.cs" />
     <Compile Include="Game\Tests\Inventory\DummyInventoryView.cs" />
     <Compile Include="Game\Tests\Inventory\DummySlot.cs" />
     <Compile Include="Game\Tests\Inventory\InventoryTest.cs" />
