Rendering First Steps

--- a/Console Game/Console Game.csproj
+++ b/Console Game/Console Game.csproj
@@ -142,17 +142,28 @@
     <Compile Include="Game\Runtime\Enemy\Model\ShooterEnemy.cs" />
     <Compile Include="Game\Runtime\Enemy\Model\Zombie.cs" />
     <Compile Include="Game\Runtime\Enemy\Nodes\AttackHealthNode.cs" />
+    <Compile Include="Game\Runtime\GameLoop\Model\RenderingLoop.cs" />
     <Compile Include="Game\Runtime\GameLoop\Objects\GameObject\Group\GameObjects.cs" />
     <Compile Include="Game\Runtime\GameLoop\Objects\GameObject\Group\IGameObjects.cs" />
     <Compile Include="Game\Runtime\GameLoop\Objects\GameObject\Group\IGameObjectsGroup.cs" />
     <Compile Include="Game\Runtime\GameLoop\Objects\GameObject\Group\SelfCleaningGameObjects.cs" />
     <Compile Include="Game\Runtime\GameLoop\Objects\GameObject\IGameObject.cs" />
     <Compile Include="Game\Runtime\GameLoop\Objects\GameObject\IReadOnlyGameObject.cs" />
+    <Compile Include="Game\Runtime\GameLoop\Objects\Rendering\Group\IRenderers.cs" />
+    <Compile Include="Game\Runtime\GameLoop\Objects\Rendering\Group\IRenderersGroup.cs" />
+    <Compile Include="Game\Runtime\GameLoop\Objects\Rendering\Group\Renderers.cs" />
+    <Compile Include="Game\Runtime\GameLoop\Objects\Rendering\IRenderer.cs" />
     <Compile Include="Game\Runtime\GameLoop\Pause\Model\GamePause.cs" />
     <Compile Include="Game\Runtime\GameLoop\Pause\Model\IGamePause.cs" />
     <Compile Include="Game\Runtime\GameLoop\Pause\Model\IReadOnlyGamePause.cs" />
     <Compile Include="Game\Runtime\GameLoop\Pause\View\GamePauseView.cs" />
     <Compile Include="Game\Runtime\GameLoop\Pause\View\IGamePauseView.cs" />
+    <Compile Include="Game\Runtime\Graphics\Mesh\Data\IMeshData.cs" />
+    <Compile Include="Game\Runtime\Graphics\Mesh\Data\MeshData.cs" />
+    <Compile Include="Game\Runtime\Graphics\Mesh\Model\IMesh.cs" />
+    <Compile Include="Game\Runtime\Graphics\Mesh\Model\Mesh.cs" />
+    <Compile Include="Game\Runtime\Graphics\Mesh\Renderer\IMeshRenderer.cs" />
+    <Compile Include="Game\Runtime\Graphics\Mesh\Renderer\MeshRenderer.cs" />
     <Compile Include="Game\Runtime\Inventory\Factory\IInventoryViewFactory.cs" />
     <Compile Include="Game\Runtime\Inventory\Factory\InventoryViewFactory.cs" />
     <Compile Include="Game\Runtime\Physics\Colliders\Factory\BoxColliderFactory.cs" />
@@ -444,7 +455,6 @@
     <Compile Include="Game\Runtime\UI\Model\Image\IImage.cs" />
     <Compile Include="Game\Runtime\UI\Model\Image\Image.cs" />
     <Compile Include="Game\Runtime\UI\Model\Image\ImagePaths.cs" />
-    <Compile Include="Game\Runtime\UI\Model\Image\IRenderer.cs" />
     <Compile Include="Game\Runtime\UI\Model\ScrollView\IInputField.cs" />
     <Compile Include="Game\Runtime\UI\Model\ScrollView\IScrollView.cs" />
     <Compile Include="Game\Runtime\UI\Model\ScrollView\Layout\ILayoutGroup.cs" />
